<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainJarvisActivity"
    android:background="#f2f3f4" >

    <TextView
        android:id="@+id/optionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/headphoneOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/localeSpinner"
        android:layout_below="@+id/optionsText"
        android:layout_marginTop="15dp"
        android:text="@string/options_headphonoe" />
    
    <CheckBox
        android:id="@+id/callerNameSpeakerOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/localeSpinner"
        android:layout_below="@+id/headphoneOption"
        android:layout_marginTop="15dp"
        android:text="@string/options_caller_speaker" />

    <TextView
        android:id="@+id/localeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/optionsText"
        android:layout_below="@+id/callerNameSpeakerOption"
        android:text="@string/locale_instructions_text"
        android:layout_marginTop="30dp"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/localeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/optionsText"
        android:layout_below="@+id/localeText"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/demoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/optionsText"
        android:layout_below="@+id/localeSpinner"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:text="@string/demo_text" />
    
    <EditText
        android:id="@+id/textInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/optionsText"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/demoText"
        android:text="@string/demo_text_jarvis" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/speakButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textInput"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/textInput"
        android:text="@string/button" />

</RelativeLayout>